# crabgrep

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: find_matches_tests.rs
